--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage":"https://github.com/Yan5577/Calculator"
+    "homepage":"https://yan5577.github.io/Calculator/"
   },
   "scripts": {
     "start": "react-scripts start",
